Modificación del modal_buscar_cheque

--- a/fs_cheques/plugins/cheques/view/block/modal_buscar_cheque.html
+++ b/fs_cheques/plugins/cheques/view/block/modal_buscar_cheque.html
@@ -48,7 +48,7 @@
          </div>
          <ul class="nav nav-tabs" id="nav_articulos" style="display: none;">
             <li id="li_mis_articulos">
-               <a href="#" id="b_mis_articulos">Mi catálogo</a>
+               <a href="#" id="b_mis_articulos">Cheques</a>
             </li>   
             <li id="li_nuevo_articulo">
                <a href="#" id="b_nuevo_articulo">
